fix: enable portrait and landscape orientation

--- a/Info.plist
+++ b/Info.plist
@@ -27,9 +27,17 @@
 	</dict>
 	<key>UIDeviceFamily</key>
 	<integer>2</integer>
-	<key>UISupportedInterfaceOrientations</key>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIImageName</key>
+		<string></string>
+	</dict>
+	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
